--- a/04结语&学联服务.md
+++ b/04结语&学联服务.md
@@ -1,4 +1,5 @@
 ### **1. 结语**
+
 首先，我们向所有参与本《手册》编辑的同学、在群聊中为本《手册》的内容提出宝贵意见或建议的同学、以及一直以来对我们的工作给予支持的同学表示最诚挚的谢意！
 尽管我们在有限时间内已尽最大努力搜集、整理并提供准确、丰富、全面的信息，但仍无法完全避免出现遗漏、错误与疏忽。为此，如对本《指南》有任何修改意见/建议的，或想要参与编辑的，欢迎随时通过<info@acssz.org>联系我们。同时，欢迎随时在群聊中分享相关经验。
 感谢大家的理解与支持！
@@ -21,10 +22,11 @@
 * 线下活动：2023年9月16日新生大会（具体请关注学联后续通知）
 
 #### **2.2 新生微信群聊**
-- 新生总群
-- Intermezzo租房群
-- 保险互助群
-- 二手物品交易群
+
+* 新生总群
+* Intermezzo租房群
+* 保险互助群
+* 二手物品交易群
 
 欢迎扫描下方二维码查看进群方式！
 ![](.topwrite/assets/image_1683482351317.png =238)
@@ -35,31 +37,32 @@
 
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 ![](.topwrite/assets/image_1682192038118.png =245)
-业务介绍：[《一文读懂瑞士电话卡+学联Sunrise YOL福利》](<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>)
+业务介绍：[《一文读懂瑞士电话卡+学联Sunrise YOL福利》](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)
 
 ##### **2) 学联专属保险折扣：Swisscare**
 
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
-业务介绍：[《Swisscare学生保险Guideline+学联专属折扣》](<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>)
-学联专属办理链接：[Swisscare - Foreign Student Health Insurance Switzerland](<https://forms.swisscare.com/#/spss?group=3018>)
+业务介绍：[《Swisscare学生保险Guideline+学联专属折扣》](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)
+学联专属办理链接：[Swisscare - Foreign Student Health Insurance Switzerland](https://forms.swisscare.com/#/spss?group=3018)
 
 ##### **3) 学联租房合作伙伴：Intermezzo**
 
 ![](.topwrite/assets/image_1682200100537.png =258)
-业务介绍：[《新生租房篇+学联伙伴Intermezzo租房公司》](<https://forum.acssz.org/d/386>)
+业务介绍：[《新生租房篇+学联伙伴Intermezzo租房公司》](https://forum.acssz.org/d/386)
 
 ##### **4) 电子学联卡**
 
 微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
 材料审核通过后，在学联合作商家处出示该卡即可享9折优惠。
 
-#### **2.4 学联《苏黎世留学指南》**&#x20;
+#### **2.4 学联《苏黎世留学指南**》&#x20;
 
-[《苏黎世留学指南》](<https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>)
+[《苏黎世留学指南》](https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html)
 
 ^
 
-*****
-*本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布。
-资料搜集与内容编写：
-技术保障：*
+***
+
+*本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布*。
+*资料搜集与内容编写*：
+*技术保障*：
