--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -12,6 +12,8 @@
 
 ^
 
+:-: 8月考试季新生手册修缮工作有一定延迟，如某些内容和有关机构的官方信息冲突，请优先参考官方信息。
+
 ***
 
 > [warning] :-: 根据[《中华人民共和国著作权法》](http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml#)第八条与第十四条
