--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -12,7 +12,7 @@
 
 ^
 
-> [danger] :-: **8月考试季新生手册修缮工作有一定延迟，如某些内容和官方最新信息不一致，请优先参考官方信息**！
+> [danger] :-: **8月考试季新生手册修缮工作有一定延迟，如某些内容和官方最新信息不一致，请优先参考官方信息**
 
 > [warning] :-: 根据[《中华人民共和国著作权法》](http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml#)第八条与第十四条
 > 本《指南》著作权由内容贡献者共同享有，并由苏黎世学联协调管理
