--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -31,11 +31,22 @@
 
 > [info] **背景介绍**
 > *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块*。
-> 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
-> * **南城人口登记办公室（Personenmeldeamt Zürich Süd**）
->   **地址：Stadthausquai 17, 8001 Zürich（市政厅**）
->   **网站**：[Personenmeldeamt Zürich Süd](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html)
+> ^
+>
+> **2023年8月起，市政府为ETH和UZH国际学生开设了专属人口登记办公室，请大家优先选择此处预约住址申报**：
+>
+> * **ETH\&UZH国际生专属人口登记办公室 Residents' Registration Office (Student Administrations**)
+>   **地址：Fabrikstrasse 2, 8005 Zurich**
+>   **预约网站**：<https://www.etermin.net/unieth>
+>
+> ^
+>
+> 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
+>
+> * 南城人口登记办公室（Personenmeldeamt Zürich Süd）
+>   地址：Stadthausquai 17, 8001 Zürich（市政厅）
+>   预约网站：[Personenmeldeamt Zürich Süd](https://www.etermin.net/personenmeldeamtsued)
 > * 北城人口登记办公室（Personenmeldeamt Zürich Nord）
 >   地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
 >   网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
@@ -44,7 +55,7 @@
 >   网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
 >
 > 3个人口登记办公室的联系电话均为：+41 44 412 15 15
-> 重组后，市区范围内绝大多数业务均实现免预约的全市通办，本章节已按此更新。**苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响**。
+> 重组后，市区范围内绝大多数业务均实现免预约的全市通办（但首次住址申报必须选择南城人口登记办公室或国际生专属人口登记办公室）。**苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响**。
 
 **瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)
 *若预计在14天内没有找到住处*，***必须于入境起14天内前往临时住址对应的人口登记办公室***，***向工作人员说明自己的情况***，*让工作人员进行临时记录，以免成为“黑户*”。
@@ -54,8 +65,8 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记办公室**进行住址申报
-  （*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路*）
+* 如居住地在苏黎世市区的，应于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/unieth)**前往ETH\&UZH国际生专属人口登记办公室**进行住址申报。预约后，请**填写**[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)**并发送给students\@zuerich.ch**以加快后续处理速度（*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期*）
+* 如果你不是学生身份且住在苏黎世市区，首次住址申报请选择[南城人口登记办公室](https://www.etermin.net/personenmeldeamtsued)
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
