--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -65,8 +65,8 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，应于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/unieth)**前往ETH\&UZH国际生专属人口登记办公室**进行住址申报。预约后，请**填写**[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)**并发送给students\@zuerich.ch**以加快后续处理速度（*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期*）
-* 如果你不是学生身份且住在苏黎世市区，首次住址申报请选择[南城人口登记办公室](https://www.etermin.net/personenmeldeamtsued)
+* 如果你居住在苏黎世市区且是学生身份（本硕博），应于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/unieth)**前往ETH\&UZH国际生专属人口登记办公室**进行住址申报。预约后，请立即**填写**[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)**并发送给students\@zuerich.ch**以加快后续处理速度（*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期*）
+* 如果你住在苏黎世市区但不是学生身份（如是博后、研究助理、研究员等），首次住址申报请选择[南城人口登记办公室](https://www.etermin.net/personenmeldeamtsued)
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
