--- a/02落地安顿.md
+++ b/02落地安顿.md
@@ -14,7 +14,7 @@
 | [办理瑞士银行卡](26瑞士银行卡.md)                 | - 护照&#xA;- 申报确认函&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号                                     | 1. 相关合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                                                                                                              | 完成学校注册、租房及住址申报后                                 |
 | [办理保险（学联福利）并申请豁免](27保险及豁免.md)         | - 护照&#xA;- 申报确认函&#xA;- 学校开局的”学期注册确认书“&#xA;- 手机号&#xA;- 瑞士银行卡（便于缴费及报销）                | 1. 卫生局要求报备保险信息的信函（完成住址申报后一段时间通过邮寄方式发送）&#xA;2\. 保险公司的保险policy相关文件&#xA;3\. （完成豁免后）卫生局的豁免确认信                                                                                               | 完成学校注册、租房、住址申报及银行卡办理后，入境三个月内必须办理                |
 | [办理居留证](28居留证的办理.md)&#xA;（需要进行指纹录入）   | - 预约单&#xA;- 护照&#xA;- 申报确认函&#xA;- 居住地址（用于邮寄居留证）                                      | 正式居留证（DE: Aufenthaltstitel, EN: residence permit）（办理后数周通过挂号信方式寄送）                                                                                                                       | 严格按照约定时间前往，可提前但不可晚到                             |
-| [Postpaid电话卡（学联福利）](22prepaid电话卡.md)  | - 居留卡&#xA;- 学生卡                                                                     | 1. Postpaid实体电话卡（携号转卡），或&#xA;2\. Postpaid eSIM卡                                                                                                                                         | 如果办理了Prepaid卡，最早在办理Prepaid的30天后可携号转卡            |
+| [Postpaid电话卡（学联福利）](22prepaid电话卡.md)  | - 居留卡&#xA;- 学生卡                                                                     | 1. Postpaid实体电话卡（携号转卡），或&#xA;2\. 或 Postpaid eSIM卡                                                                                                                                       | 如果办理了Prepaid卡，最早在办理Prepaid的30天后可携号转卡            |
 
 ^
 
