--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -19,7 +19,7 @@
 > **未经苏黎世学联授权，严禁以任何形式转载，违者必究**
 
 > [success] :-: 2023年4月29日新生在线答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
-> （部分内容有所变动，请以本手册为准）
+> （部分内容有所变动，请以本《指南》为准）
 
 > [info] :-: **手册动态更新，欢迎持续关注**
 > 如有任何修改意见/建议，或想要参与编辑，欢迎联系我们
