Update 04结语&学联服务.md, 10申请签证.md, 37其他相关事项.md, SUMMARY.md, 居住和日常出行相关.md Delete 对于Party扰民的应对.md, 意外受伤-生病时的应对.md

--- a/04结语&学联服务.md
+++ b/04结语&学联服务.md
@@ -1,6 +1,6 @@
 ### **1. 结语**
 
-首先，我们向所有参与本《手册》编辑的同学、在群聊中为本《手册》的内容提出宝贵意见或建议的同学、以及一直以来对我们的工作给予支持的同学表示最诚挚的谢意！
+首先，我们向所有参与本《指南》编辑的同学、在群聊中为本《指南》的内容提出宝贵意见或建议的同学、以及一直以来对我们的工作给予支持的同学表示最诚挚的谢意！
 尽管我们在有限时间内已尽最大努力搜集、整理并提供准确、丰富、全面的信息，但仍无法完全避免出现遗漏、错误与疏忽。为此，如对本《指南》有任何修改意见/建议的，或想要参与编辑的，欢迎随时通过<info@acssz.org>联系我们。同时，欢迎随时在群聊中分享相关经验。
 感谢大家的理解与支持！
 苏黎世中国学生学者联合会新生工作组
@@ -19,7 +19,6 @@
 * 学联小红书：
   ![](.topwrite/assets/image_1682199946890.png =159)
 * 学联邮箱：<info@acssz.org>
-* 线下活动：2023年9月16日新生大会（具体请关注学联后续通知）
 
 #### **2.2 新生微信群聊**
 
@@ -53,7 +52,7 @@
 ##### **4) 电子学联卡**
 
 微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
-材料审核通过后，在学联合作商家处出示该卡即可享9折优惠。
+材料审核通过后，在学联合作商家处出示该卡即可享9折优惠，具体可在小程序内查看。
 
 #### **2.4 学联《苏黎世留学指南**》&#x20;
 
@@ -63,6 +62,6 @@
 
 ***
 
-*本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布*。
+*本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布。*
 *资料搜集与内容编写*：
 *技术保障*：
