--- a/居住和日常出行相关.md
+++ b/居住和日常出行相关.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：徐思婕
+> [success] 本章作者：徐思婕、杨锦涛
 
 ### **1. 垃圾分类**
 瑞士的垃圾分类比较严格，会有专门的工作人员检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其它垃圾必须放到Zürisack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
