--- a/家具的置办.md
+++ b/家具的置办.md
@@ -5,7 +5,7 @@
 如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。
 
 
-
-**持有有效ETH卡的同学可以享受4个月的免费mobility（一家当地租车公司）的会员（链接：<https://ethz.ch/staffnet/en/service/eth-card/functions/mobility-car-sharing-offers.html>）\
-Mobility是一家瑞士租车公司价目表（链接：<https://www.mobility.ch/en/private-customers/offers-and-rates/mobilityplus#c4953>）一般来说租用大货车半天的价格为50chf左右，另外需要购买保险（单次购买较贵15-30chf，长时间购买则划算许多）**
+^
+持有有效ETH卡的同学可以享受4个月的免费mobility（一家当地租车公司）的会员（链接：<https://ethz.ch/staffnet/en/service/eth-card/functions/mobility-car-sharing-offers.html>）\
+Mobility是一家瑞士租车公司价目表（链接：<https://www.mobility.ch/en/private-customers/offers-and-rates/mobilityplus#c4953>）一般来说租用大货车半天的价格为50chf左右，另外需要购买保险（单次购买较贵15-30chf，长时间购买则划算许多）
 
