Update 05结语&学联服务.md, 10行李丢失处理.md, 12国内银行卡.md, SUMMARY.md, 奖助学金和助教兼职.md, 家具的置办.md, 找房租房.md Delete 04结语&学联服务.md, 37其他相关事项.md

--- a/找房租房.md
+++ b/找房租房.md
@@ -1,10 +1,10 @@
 > [warning] **声明**：学联只提供信息整理，对本章节所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
 
-> [success] **本章作者**：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞和张家萌、陈庆瑄、彭雅莹、岳妮
->
-> **特别鸣谢**：原苏黎世6区居委会
+> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮
 
-> [info] **学联提醒**：
+> [success] 特别鸣谢：原苏黎世6区居委会
+
+> [info] 【学联提醒】
 >
 > 1\. 找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
 >
