--- a/10行李丢失处理.md
+++ b/10行李丢失处理.md
@@ -1,29 +1,30 @@
 > [success] 本章作者：徐思婕
 
-* **出发前**在行李上做好明显标记（如系彩色丝带等），并在行李牌上写清楚自己的名字、邮箱等联系方式
-* **落地后**，在行李转盘寻找后确定没有找到自己的行李，及时联系机场工作人员。机场工作人员会带你去行李丢失处寻找，那里有很多没人认领的箱子
-* 如果在行李丢失处没有找到箱子，直接联系机场工作人员告知你的情况。他们会询问你丢失箱子的相关信息，一定要尽可能详细地告诉他们行李箱的模样（如：颜色、材质、尺寸、标记等）。登记完成后，工作人员会让你留下**联系方式**和**住宿地址**。
+### **1. 行李丢失预防**
+- 出发前在行李上**做好明显标记（如系彩色丝带等）**，并在行李牌上**写清楚自己的姓名、邮箱等联系方式**
+- 托运行李内不要放名贵物品，有被工作人员盗窃的可能。
+- 电脑、手表等贵重物品一定要放在随身行李中。
+- 关于箱子是否需要上锁，各有利弊，请自行斟酌。
+- 对于联程机票，办理值机和行李托运时，应向值机员**确认行李在各个中转站是否直挂**，并检查值机员在所托运行李上贴上的行李牌上**是否包含全部中转站和到达站**（如中转路线为北京首都-法兰克福-苏黎世，则行李牌上应当出现“TO: ZRH VIA: FRA”字样。如行李不能直挂，则需要乘客在中转站的行李转盘提取行李并再次办理托运。
+- 在机场后拿到行李后，立马检查行李是否被翻以及是否有东西丢失，如有相关情况，要在机场马上报告。
 
-> **联系方式**：如果你没有瑞士当地手机号，可以留下在瑞士学长学姐或者朋友的手机号，并且告诉工作人员这是你朋友的联系方式，此外最好留下个人常用邮箱。
->
-> **住宿地址**：租到房子的同学，直接留房子地址；未租到房子的同学，可留下酒店/民宿等你暂时过渡的地址，并告知机场工作人员。
+^
 
-* 登记完成后，工作人员会给你一张单子，上面有行李丢失编号，以及机场的行李丢失官网和联系方式。务必保存好这张单子
-* **建议不要等机场给你打电话**，在工作日时间可以给机场打电话询问行李情况，也可以在官网查看行李情况。如果打电话时行李已找到，建议最好不要让他们邮寄，时间允许的话立马去机场取行李（带上单子、机票、护照）。邮寄会比较慢，2-3天甚至更久才会收到
-* **一般行李会在7天左右找到**，如果在5天后仍没有找到，建议联系第一程/第二程航空公司询问行李是否已经转运到第二程/第三程飞机上，并与他们核对行李牌编号。如果出现行李箱上的行李牌编号和单子上行李牌编号不一致，请及时告知最后一程飞机的航空公司（有时候会出现转机飞机的工作人员输错行李编号的情况）
+### **2. 确定行李丢失后的处理**
+#### **2.1 与航司/机场工作人员的交涉**
+- **落地后**，如在行李转盘寻找后确定没有找到自己的行李，及时联系机场工作人员。机场工作人员会带你去行李丢失处寻找，那里有很多没人认领的箱子
+- 如果在行李丢失处没有找到箱子，直接联系机场工作人员告知你的情况。他们会询问你丢失箱子的相关信息，一定要尽可能详细地告诉他们行李箱的模样（如：颜色、材质、尺寸、标记等）。登记完成后，工作人员会让你留下**联系方式**和**住宿地址**。
+➢ **联系方式**：如果你没有瑞士当地手机号，可以留下在瑞士学长学姐或者朋友的手机号，并且告诉工作人员这是你朋友的联系方式，此外最好留下个人常用邮箱。
+➢ **住宿地址**：租到房子的同学，直接留房子地址；未租到房子的同学，可留下酒店/民宿等你暂时过渡的地址，并告知机场工作人员。
+- 登记完成后，工作人员会给你一张单子，上面有行李丢失编号，以及机场的行李丢失官网和联系方式。务必保存好这张单子
+
+#### **2.2 等待处理**
+> [warning] 【学联提醒】
+> - 丢失行李后一定要积极给航空公司打电话询问行李情况
+> - 最好自己及时去机场取行李，不要邮寄
+> - 尽量在短时间内解决该事，以避免耽误落地安顿
+- **建议不要等机场给你打电话**，在工作日时间可以给机场打电话询问行李情况，也可以在官网查看行李情况。如果打电话时行李已找到，建议最好不要让他们邮寄，时间允许的话立马去机场取行李（带上单子、机票、护照）。邮寄会比较慢，2-3天甚至更久才会收到
+- **一般行李会在7天左右找到**，如果在5天后仍没有找到，建议联系第一程/第二程航空公司询问行李是否已经转运到第二程/第三程飞机上，并与他们核对行李牌编号。如果出现行李箱上的行李牌编号和单子上行李牌编号不一致，请及时告知最后一程飞机的航空公司（有时候会出现转机飞机的工作人员输错行李编号的情况）
+
+#### **2.3 后续索赔**
 * 丢失期间购置衣物等费用可以由航空公司负责承担。
-* 始发时检查行李牌是否包含所有中转和目的地位置。
-* 托运行李内不要放名贵物品，可能被内部盗窃。关于箱子是否需要上锁，各有利弊 。
-* 电脑手表等贵重物品一定要放在随身行李中。
-* 在机场后拿到行李后，立马检查行李是否被翻以及是否有东西丢失，如有相关情况，要在机场马上报告。
-* 航空公司行李跟踪服务。
-
-^
-
-**切记**：
-
-* 丢失行李后一定要积极给航空公司打电话询问行李情况
-* 最好自己及时去机场取行李，不要邮寄
-* 尽量在短时间内解决该事
-
-^
