--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：杜超瑜、杨锦涛、赵逸飞
+> [success] 本章作者：杜超瑜、杨锦涛、赵逸飞、
 
 > [info] 本章节最近更新于：2023年XX月XX日
 
@@ -25,7 +25,11 @@
 * 持有任一申根国家签发的有效申根居留或申根D类签证的非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
 
 换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述“不需要办理签证”条件的留学生，请参考[Immigration to Switzerland - Immigration without a visa](https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html)。
-此外，如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel），具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
+此外，如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，或有其他类似情况（如EPFL转ETH等）的，可选择向苏黎世州移民局申请办理
+- 延期（Verlängerung）（适用于原居留证由苏黎世州移民局签发的）或
+- “境内迁移”（Kantonswechsel）（适用于原居留证由瑞士其他州的主管部门签发的），
+
+具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。对于诸如此类的“冷门”情况，我们始终建议**主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
 
 ^
 
