--- a/11行李准备.md
+++ b/11行李准备.md
@@ -1,27 +1,25 @@
 > [success] 本章作者：陈雨航
 
-> [warning] 【学联提醒】*以下内容仅供参考，请以个人实际需求为准*
-
-> [info] **建议**：日常物品最好放在随身行李里，以便在托运行李万一丢失时依然可以维持短期的生活
+> [warning] 【学联提醒】以下内容仅供参考，请以个人实际需求为准。
 
 > [info] 苏黎世机场海关对**入境携带物品的规定**请见：<https://www.flughafen-zuerich.ch/en/passengers/fly/all-about-the-flight/customs>
 
-#### **1. 必备物品**
+### **1. 整理行李注意事项**
+- 出发前在行李上**做好明显标记（如系彩色丝带等）**，并在行李牌上**写清楚自己的姓名、邮箱等联系方式**
+- 托运行李内不要放名贵物品，有被工作人员盗窃的可能。
+- 电脑、手表等贵重物品一定要放在随身行李中。
+- 日常物品最好放在随身行李里，以便在托运行李万一丢失时依然可以维持短期的生活
+- 关于箱子是否需要上锁，各有利弊，请自行斟酌。
 
-（不带这些你出来干啥\~瑞士没有获取渠道）
+^
 
-**证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件
-- 关于驾照：
-> [warning] 本部分考虑移动或复制至[34 证照相关](<34证照相关.md>)章节
+### **2. 必备物品**
+*（不带这些你出来干啥\~瑞士没有获取渠道）*
 
-*※在入境瑞士的第一年内，配合认证/公证翻译文件（翻译为英法德意均可），可以使用中国驾照租车、开车。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租车网站上有一个“国际驾照认证件”，据说被认可度很高。
-※超过一年后，中国驾照不再有效，必须转为瑞士驾照。转驾照首先需要在Strassenverkehrsamt（交管局）进行公证，然后报名参加瑞士的路考（Kontrollfahrt）。路考重点不在汽车操控而在于对当地交规的理解，推荐先找瑞士本地驾校教练培训后再参加路考。路考一旦挂科，国内驾照立即失效且不能补考，得从理论开始从头再来了。
-具体规则请参考以下网址：
-<https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>*
-- **证件照**：护照规格（35\*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵，而且拍出来巨丑
+- **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件
+- **证件照**：护照规格（35\*45）证件照5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵，而且拍出来巨丑
 - **现金**：2000左右CHF基本够用。需要注意如果是UZH新生的话请至少额外准备1000CHF左右的现金用于缴纳第一笔学费，因为交学费的POST似乎没法刷信用卡和银联卡，而那会你也肯定没有办出本地的银行卡
-- **手机**：不用多说，没了它好多事干不了，国内手机在这边使用没问题。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动或联通或电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G
-
+- **手机**：不用多说，没了它好多事干不了，国内手机在这边使用没问题。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动/联通/电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G
 - **银联、信用卡**：关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡
 ※瑞士不会有银行通过邮件方式通知你账号有异常情况，任何以银行名义给你发的邮件建议统统删除
 
@@ -30,14 +28,13 @@
 
 ^
 
-#### **2. 推荐携带**
-
-（日常所需，瑞士有获取渠道，但性价比低或功能受限）
+### **3. 推荐携带**
+*（日常所需，瑞士有获取渠道，但性价比低或功能受限）*
 
 - **插线板**：搭配转换插头使用。国内带来的电器可用，瑞标和欧标的两脚插头也可用。如果需要携带多个带国内插头的用电器的话插线板最好带上，省得一两个转换插头换来换去
 - **电子配件**：移动硬盘，U盘，充电线，充电宝等，注意充电宝建议自备一个，瑞士本地能买到的充电宝大都贵得离谱而且质量还没有国内牌子好（而且大概率还是Made in China）
 - **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
-※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多
+*有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多*
 - **眼镜**：1-2副备用。在瑞士价格较贵。墨镜在日常阳光下可满足护眼需求，上雪山时则为生存必须。爱运动的同学也推荐从国内购买泳镜。尤其是近视泳镜，苏黎世及周边边境城市都没有卖
 - **日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。身材较为娇小的同学建议可以自备好多条裤子，这边的裤子往往比较大
 厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的
@@ -46,9 +43,9 @@
 
 ^
 
-#### **3. 可考虑携带**
+### **4. 可考虑携带**
 
-（不是日常生活必须，但偶尔能用上，瑞士有购买渠道）
+*（不是日常生活必须，但偶尔能用上，瑞士有购买渠道）*
 - **旅行装洗漱用品**：到达瑞士的最初几天应急用。
 - **小电饭煲**：没了它煮米饭得累死，不过小电饭煲在各种亚超和二手群里面一般很容易找到，实在不行去本地的小米专卖店买一个也行（千万别买本地的牌子，其匮乏且不可靠的功能堪称智障）
 - **床上用品**：IKEA价格相对合理，种类偏少，质量略粗糙
@@ -63,9 +60,9 @@
 
 ^
 
-#### **4. 爱带不带**
+### **5. 爱带不带**
 
-（瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）
+*（瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）*
 
 - **电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
 - **正装**：可以考虑去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。苏黎世的HM等服装店也可以买到物美价廉的正装，或选择网购也可以
@@ -74,15 +71,11 @@
 
 ^
 
-#### **5. 最好不带**
+### **6. 最好不带**
 
-（本地可以买到一模一样的，或者有入境限制）
+*（本地可以买到一模一样的，或者有入境限制）*
 
 - **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
 - **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买，或和室友协商共用。如实在想带，可自行权衡“所花费行李额”和“国内vs瑞士电饭煲差价”，并预估未来自己日常实际使用频率
 - **肉类和乳制品**：来自非欧盟和非EFTA国家的动物源性食品（肉类、乳制品等）禁止入境瑞士
 - **瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
-
-
-
-^
