Update 11行李准备.md, 12国内手机及电话卡.md, 12国内银行卡.md

--- a/11行李准备.md
+++ b/11行李准备.md
@@ -1,15 +1,15 @@
 > [success] 本章作者：陈雨航
 
-> [warning] 【学联提醒】以下内容仅供参考，请以个人实际需求为准。
-
-> [info] 苏黎世机场海关对**入境携带物品的规定**请见：<https://www.flughafen-zuerich.ch/en/passengers/fly/all-about-the-flight/customs>
+> [warning] 【学联提醒】
+> - 以下内容仅供参考，请以个人实际需求为准
+> - 关于苏黎世机场海关对**入境携带物品的规定**请参考：[Goods subject to duty and allowances](<https://www.flughafen-zuerich.ch/en/passengers/fly/all-about-the-flight/customs>)
 
 ### **1. 整理行李注意事项**
 - 出发前在行李上**做好明显标记（如系彩色丝带等）**，并在行李牌上**写清楚自己的姓名、邮箱等联系方式**
-- 托运行李内不要放名贵物品，有被工作人员盗窃的可能。
-- 电脑、手表等贵重物品一定要放在随身行李中。
-- 日常物品最好放在随身行李里，以便在托运行李万一丢失时依然可以维持短期的生活
-- 关于箱子是否需要上锁，各有利弊，请自行斟酌。
+- 托运行李内不要放名贵物品，有被盗窃的可能
+- 电脑、手表等贵重物品一定要放在随身行李中
+- 日常物品最好放在随身行李里，以便在托运行李丢失时依然可以维持短期的生活
+- 关于箱子是否需要上锁，各有利弊，请自行斟酌
 
 ^
 
