--- a/12国内银行卡.md
+++ b/12国内银行卡.md
@@ -1,6 +1,8 @@
 > [success] 本章作者：李圆
 
-> [info] 【学联提醒】目前，瑞士境内所有ATM终端及近95%商户均支持银联卡。此外，鉴于磁条卡有时无法使用，应尽量办理芯片卡。
+> [info] 【学联提醒】
+> - 目前，瑞士境内所有ATM终端及近95%商户均支持银联卡
+> - 鉴于磁条卡有时无法使用，应尽量办理芯片卡。
 
 ### **1. [中国银行长城留学借记卡](https://www.boc.cn/bcservice/bc2/201704/t20170426_9329829.html)**
 
