--- a/12国内手机及电话卡.md
+++ b/12国内手机及电话卡.md
@@ -1,8 +1,8 @@
 > [success] 本章作者：李圆
 
-> [warning] *本章节仅介绍国内设备和SIM卡在国外的使用，关于瑞士本地SIM卡请参考*[22 瑞士电话卡](22prepaid电话卡.md)*章节*。
+> [warning] *本章节仅介绍国内设备和SIM卡在国外的使用，关于瑞士本地SIM卡请参考[22 瑞士电话卡](22prepaid电话卡.md)章节*。
 
-> [info] 【学联提醒】*为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游***。
+> [info] 【学联提醒】为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游**。
 
 ### **1. 最低月费保号套餐**
 
