Update 03落地安顿.md, 04生活相关.md, 06结语&学联服务.md, SUMMARY.md, 二、找房租房.md, 关于《无债务-无犯罪记录证明》.md, 奖助学金和助教兼职.md, 常用租房渠道及其流程.md, 租房考虑因素.md, 资金安全和常见骗局.md Delete 02落地安顿.md, 03生活相关.md, 05结语&学联服务.md, 找房租房.md

--- a/06结语&学联服务.md
+++ b/06结语&学联服务.md
@@ -23,9 +23,9 @@
 #### **2.2 新生微信群聊**
 
 * 新生总群
-* Intermezzo租房群
+* 租房信息群
 * 保险互助群
-* 二手物品交易群
+* 二手交易群
 
 欢迎扫描下方二维码查看进群方式！
 ![](.topwrite/assets/image_1683482351317.png =238)
@@ -33,28 +33,26 @@
 #### **2.3 学联福利汇总**&#x20;
 
 ##### **1) 学联专属SIM卡折扣：Sunrise & LEBARA**
-
+业务介绍：[《一文读懂瑞士电话卡+学联Sunrise YOL福利》](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 ![](.topwrite/assets/image_1682192038118.png =245)
-业务介绍：[《一文读懂瑞士电话卡+学联Sunrise YOL福利》](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)
 
 ##### **2) 学联专属保险折扣：Swisscare**
-
-![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 业务介绍：[《Swisscare学生保险Guideline+学联专属折扣》](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)
 学联专属办理链接：[Swisscare - Foreign Student Health Insurance Switzerland](https://forms.swisscare.com/#/spss?group=3018)
+![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 
 ##### **3) 学联租房合作伙伴：Intermezzo**
-
-![](.topwrite/assets/image_1682200100537.png =258)
 业务介绍：[《新生租房篇+学联伙伴Intermezzo租房公司》](https://forum.acssz.org/d/386)
+![](.topwrite/assets/image_1682200100537.png =258)
+
 
 ##### **4) 电子学联卡**
 
 微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
 材料审核通过后，在学联合作商家处出示该卡即可享9折优惠，具体可在小程序内查看。
 
-#### **2.4 学联《苏黎世留学指南**》&#x20;
+#### **2.4 学联《苏黎世留学指南》**
 
 [《苏黎世留学指南》](https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html)
 
