--- a/奖助学金和助教兼职.md
+++ b/奖助学金和助教兼职.md
@@ -1,5 +1,7 @@
 > [success] 本章作者：徐思婕
 
+> [success] 特别鸣谢：
+
 ### **1. 奖助学金**
 - 国际**本科生**在完成第一个学期的修课之后可申请Solidarity Fund for Foreign Students (<https://www.ethz.ch/students/en/studies/financial/solidarity-fund.html>)。
 - 国际**硕士**研究生在完成第二个学期的修课拿到一定的学分后可以申请国际学生奖学金（<https://www.ethz.ch/students/en/studies/financial/scholarships/cost-of-living.html）>, 奖金数额往往比较可观，按照以往几年经验中国人申请到的几率非常之大；
