--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -1,61 +1,34 @@
 > [success] 本章作者：田竹仝，陈雨航，赵逸飞，杨锦涛，范梦瑶
 
-> [danger] 导向本章节的超链接可能失效，需要额外核实。
+> [warning] *本章节内容自2023年8月起适用*。
+
+> [info] *本章节使用了诸多专有翻译，请参考本章附录部分。*
 
 #### **1. 苏黎世州的住址申报体系介绍**
-
-*本章节内容自2023年6月12日起适用*。
-本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，非地名的翻译列表如下：
-
-| 本文使用的中文译名             | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
-| --------------------- | ------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
-| 苏黎世州                  | Kanton Zürich                                                | Canton of Zurich                                                                   |
-| 苏黎世市 / 苏黎世市区          | Stadt Zürich                                                 | City of Zurich                                                                     |
-| 市县                    | Gemeinde                                                     | Community                                                                          |
-| 居委会 （*2023年6月12日起撤销*） | Kreisbüro                                                    | District office                                                                    |
-| 人口登记办公室               | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
-| 住址申报                  | anmelden                                                     | register                                                                           |
-| 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
-| 住址注销                  | abmelden                                                     | de-register                                                                        |
-| **申报确认函**             | **Meldebestätigung**                                         | **Confirmation of registration**                                                   |
-| **居留证/居留卡**           | **Aufenthaltstitel**&#xA;**Aufenthaltsbewilligung**          | **Residence permit**                                                               |
-
-^
-
-地名的翻译在正文中以括号形式列明。
-此外，本章节所称的“苏黎世郊区”特指属于苏黎世州但不属于苏黎世市的地区，详见下图：
-![](.topwrite/assets/image_1685999282078.png)
-其中，彩色部分是苏黎世市，灰色部分即为苏黎世郊区。
-
-^
-
-> [info] **背景介绍**
+> [info] 【背景介绍】
 > *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块*。
->
-> ^
->
-> **2023年8月起，市政府为ETH和UZH国际学生开设了专属人口登记办公室，请大家优先选择此处预约住址申报**：
->
-> * **ETH\&UZH国际生专属人口登记办公室 Residents' Registration Office (Student Administrations**)
->   **地址：Fabrikstrasse 2, 8005 Zurich**
->   **预约网站**：<https://www.etermin.net/unieth>
->
-> ^
->
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
->
-> * 南城人口登记办公室（Personenmeldeamt Zürich Süd）
+> - **南城人口登记办公室（Personenmeldeamt Zürich Süd）**
 >   地址：Stadthausquai 17, 8001 Zürich（市政厅）
->   预约网站：[Personenmeldeamt Zürich Süd](https://www.etermin.net/personenmeldeamtsued)
-> * 北城人口登记办公室（Personenmeldeamt Zürich Nord）
+>   网站：[Personenmeldeamt Zürich Süd](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html>)
+>   预约链接（仅适用于外国新迁入人员）：[Terminreservation](https://www.etermin.net/personenmeldeamtsued)
+> - **北城人口登记办公室（Personenmeldeamt Zürich Nord）**
 >   地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
 >   网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
-> * 西城人口登记办公室（Personenmeldeamt Zürich West）
+> - **西城人口登记办公室（Personenmeldeamt Zürich West）**
 >   地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
 >   网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
 >
 > 3个人口登记办公室的联系电话均为：+41 44 412 15 15
+> ^
+>  2023年8月，市政府为前来ETH和UZH的留学生新设立了专属的人口登记办公室，ETH和UZH的学生可选择此处预约办理住址申报：
+>
+> * **ETH\&UZH国际生专属人口登记办公室 Residents' Registration Office (Student Administrations**)
+>   **地址：Fabrikstrasse 2, 8005 Zurich**
+>   **预约网站**：<https://www.etermin.net/unieth>
+> 
 > 重组后，市区范围内绝大多数业务均实现免预约的全市通办（但首次住址申报必须选择南城人口登记办公室或国际生专属人口登记办公室）。**苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响**。
+
 
 **瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)
 *若预计在14天内没有找到住处*，***必须于入境起14天内前往临时住址对应的人口登记办公室***，***向工作人员说明自己的情况***，*让工作人员进行临时记录，以免成为“黑户*”。
@@ -123,5 +96,25 @@
 与此同时，新承租人（包括**转租租客**）需要向社区所在的人口登记办公室申报住址（第一次申报住址需要线下办理，之后可使用[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)）。
 
 > 苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
-
 ^
+### **附录：本章节中英德术语互译**
+本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：
+
+| 本文使用的中文译名             | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
+| --------------------- | ------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
+| 苏黎世州                  | Kanton Zürich                                                | Canton of Zurich                                                                   |
+| 苏黎世市 / 苏黎世市区          | Stadt Zürich                                                 | City of Zurich                                                                     |
+| 市县                    | Gemeinde                                                     | Community                                                                          |
+| 居委会 *（2023年6月12日起撤销）* | Kreisbüro                                                    | District office                                                                    |
+| 人口登记办公室               | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
+| 住址申报                  | anmelden                                                     | register                                                                           |
+| 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
+| 住址注销                  | abmelden                                                     | de-register                                                                        |
+| **申报确认函**             | **Meldebestätigung**                                         | **Confirmation of registration**                                                   |
+| **居留证/居留卡**           | **Aufenthaltstitel**&#xA;**Aufenthaltsbewilligung**          | **Residence permit**                                                               |
+
+地名的翻译在正文中以括号形式列明。
+
+此外，本章节所称的“苏黎世郊区”特指属于苏黎世州但不属于苏黎世市的地区，参见下图：
+![](.topwrite/assets/image_1685999282078.png)
+其中，彩色部分是苏黎世市，灰色部分即为苏黎世郊区。
