Update 00欢迎页.md, 10行李丢失处理.md, 25住址申报（“户口”）.md, 34证照相关.md, SUMMARY.md, 交通及出行相关.md, 瑞士电话卡.md Delete 21交通票.md, 22prepaid电话卡.md

--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -1,10 +1,10 @@
 > [success] 本章作者：田竹仝，陈雨航，赵逸飞，杨锦涛，范梦瑶
 
-> [warning] *本章节内容自2023年8月起适用*。
+> [info] *本章节内容最近更新于2023年8月29日，自2023年8月起适用*。
 
 > [info] *本章节使用了诸多专有翻译，请参考本章附录部分。*
 
-#### **1. 苏黎世州的住址申报体系介绍**
+### **1. 苏黎世州的住址申报体系介绍**
 > [info] 【背景介绍】
 > *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块*。
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
@@ -21,17 +21,18 @@
 >
 > 3个人口登记办公室的联系电话均为：+41 44 412 15 15
 > ^
->  2023年8月，市政府为前来ETH和UZH的留学生新设立了专属的人口登记办公室，ETH和UZH的学生可选择此处预约办理住址申报：
->
-> * **ETH\&UZH国际生专属人口登记办公室 Residents' Registration Office (Student Administrations**)
->   **地址：Fabrikstrasse 2, 8005 Zurich**
->   **预约网站**：<https://www.etermin.net/unieth>
+> 此外，2023年8月起，市政府为前来ETH和UZH的留学生新设立了专属的人口登记办公室：
+> - **ETH&UZH留学生专用人口登记办公室 [Residents' Registration Office (Student Administrations)]**
+>   地址：Fabrikstrasse 2, 8005 Zurich
+>   预约链接（仅适用于就读ETH/UZH的外国新迁入人员）：[Appointment Service](https://www.etermin.net/unieth)
 > 
-> 重组后，市区范围内绝大多数业务均实现免预约的全市通办（但首次住址申报必须选择南城人口登记办公室或国际生专属人口登记办公室）。**苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响**。
+> ETH和UZH的学生亦可选择此处预约办理住址申报。
+> ^
+> 此番调整后，除境外迁入人员的首次住址申报外，市区范围内绝大多数业务实现免预约的全市通办 **（不包含ETH&UZH留学生专属人口登记办公室）**，而境外迁入人员的首次住址申报须**凭预约**在**南城人口登记办公室**或**ETH&UZH留学生专属人口登记办公室**办理。此外，苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响。
 
 
-**瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)
-*若预计在14天内没有找到住处*，***必须于入境起14天内前往临时住址对应的人口登记办公室***，***向工作人员说明自己的情况***，*让工作人员进行临时记录，以免成为“黑户*”。
+**瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)。
+*若预计在入境后14天内不能找到住处的，或是找到住处但因客观原因无法进行申报的，**必须在此期限内联系临时住址对应的人口登记办公室，向工作人员说明自己的情况**，让工作人员进行临时记录，以免成为“黑户”。*
 
 ^
 
