--- a/34证照相关.md
+++ b/34证照相关.md
@@ -33,7 +33,7 @@
 
 > [warning] 本章节关于“博士的存款证明”内容需要额外核实
 
-在人口登记处办理居留证延期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于本科和硕士学生，移民局几乎一定会要求补交一份最近开具的**存款证明**（或不适用于博士），表明其银行账户内余额在办理延期时**不低于21000.00瑞郎**（即：不允许使用先前办理签证时使用的存款证明来办理延期！）
+在人口登记处办理居留证延期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于**本科和硕士**学生，移民局几乎一定会要求补交一份最近开具的**存款证明**，表明其银行账户内余额在办理延期时**不低于21000.00瑞郎**（即：不允许使用先前办理签证时使用的存款证明来办理延期！）
 在收到此类信件后，须按照信中要求，在规定时间前递交相应材料。如在规定时间前因故无法提供全部或部分材料的，也**必须**向移民局回信说明，并注明预期的上交时间。递交和回信方式参见后文“联系移民局/补交材料”部分。
 
 #### **1.4  新居留证的寄送**
