--- a/交通及出行相关.md
+++ b/交通及出行相关.md
@@ -1,10 +1,10 @@
 > [success] 本章作者：杨晨宇
 
-#### **1. 交通系统简介**
+#### **1. 苏黎世公共交通系统简介**
 
-苏黎世的日常出行中与下面三个名字密不可分：
+苏黎世的日常出行与下面三个名字密不可分：
 
-* 苏黎世交通网络 [ZVV](https://www.zvv.ch/zvv/en/home.html)
+* 苏黎世公共交通系统 [ZVV](https://www.zvv.ch/zvv/en/home.html)
 * 瑞士联邦铁路 [SBB](https://www.sbb.ch/en)
 * 公交身份卡 [SwissPass](https://www.swisspass.ch/info/welcome)
 
