--- a/瑞士电话卡.md
+++ b/瑞士电话卡.md
@@ -1,8 +1,8 @@
 > [success] 本章作者：杨锦涛
 
-> [warning] *本章节仅介绍瑞士本地电话卡的办理，关于国内设备和SIM卡在国外的使用请参考*[12 国内手机及电话卡](12国内手机及电话卡.md)*章节*。
+> [warning] *本章节仅介绍瑞士本地电话卡的办理，关于国内设备和SIM卡在国外的使用请参考[行前篇《国内手机及电话卡》章](<12国内手机及电话卡.md>)*。
 
-#### **1. 瑞士电信运营商简介**
+### **1. 瑞士电信运营商简介**
 
 瑞士三家主要的电信运营商是Swisscom，Sunrise和Salt。据CHIP和NETCHECK在2021年的测评，Swisscom总评分位居首位，Sunrise紧跟其后，位于第三位的是Salt。具体单项上：
 
@@ -21,7 +21,7 @@
 
 ^
 
-#### **2. Prepaid和Postpaid**
+### **2. 关于预付卡（Prepaid）和合约卡（Postpaid）**
 
 瑞士电话卡分为Prepaid Card（预付卡）和Postpaid Card（合约卡），目前瑞士约80%的用户均为Postpaid Card（合约卡）。
 
@@ -35,13 +35,13 @@
 
 ^
 
-#### **3. 购卡套餐**
+### **3. 购卡套餐**
 
 关于每家公司的套餐，大家可在官网查看，根据自己的需求选择：
 
-Sunrise → <https://www.sunrise.ch/de/home>
-Swisscom → <https://www.swisscom.ch/de/privatkunden.html>
-Salt → <https://www.salt.ch/en>
+- Sunrise → <https://www.sunrise.ch/de/home>
+- Swisscom → <https://www.swisscom.ch/de/privatkunden.html>
+- Salt → <https://www.salt.ch/en>
 
 但是，一个一个去官网对比套餐真的好麻烦呀\~
 
