--- a/31苏黎世消费与邮寄.md
+++ b/31苏黎世消费与邮寄.md
@@ -1,48 +1,64 @@
 > [success] 本章作者：凌晞、徐思婕
 
-#### **1. 月生活费**
+> [warning] 本章节部分内容需要重新排版与核实
 
-一般在1200-1500瑞左右。
+### **1. 每月开销**
 
-固定开销有房租、保险、电话费、交通费等，如果住学生公寓，woko、juwo、wfss，一般房租在500-800之间，比较便宜，如果租在外面私人房东，价格会更贵一些，在600-1000之间。
+一般情况下，每月开销为1200-1500瑞郎：
 
-保险方面，可以选择[学联专属Swisscare折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)，最低58瑞/月起（32岁以下）；如果初来乍到不放心，想要0元起赔，则可以选择Academic Care的0元起赔套餐，但其费用相对偏高（25岁以下120瑞/月，25岁及以上210瑞/月）。
+- 固定开销：房租、保险、电话费、交通费等
+如果住学生公寓，woko、juwo、wfss，一般房租在500-800之间，比较便宜
+如果租在外面私人房东，价格会更贵一些，在600-1000之间。
 
-电话费一般在20-35瑞之间，学联有[Sunrise LEBARA专属折扣渠道](22prepaid电话卡.md)，其费用比市场价更低。
+- 保险方面，可以选择[学联专属Swisscare折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)，最低58瑞/月起（32岁以下）；如果初来乍到不放心，想要0元起赔，则可以选择Academic Care的0元起赔套餐，但其费用相对偏高（25岁以下120瑞/月，25岁及以上210瑞/月）。
 
-交通费一般会买110区年卡，25岁以下的同学一年570瑞。
+- 电话费一般在20-35瑞之间，学联有[Sunrise LEBARA专属折扣渠道](22prepaid电话卡.md)，其费用比市场价更低。
 
-其余的开销就是平时买菜购物了，如果大多在家做饭，差不多一个月200瑞左右超市购物就够了，偶尔下次馆子，人均在30-50瑞左右。
+- 交通费一般会买110区年卡，25岁以下的同学一年570瑞。
 
-网购一些护肤品衣服之类的，消费50-200不等。
+- 其余的开销就是平时买菜购物了，如果大多在家做饭，差不多一个月200瑞左右超市购物就够了，偶尔下次馆子，人均在30-50瑞左右。
+
+- 网购一些护肤品衣服之类的，消费50-200不等。
 
 ^
 
-#### **2. 现金还是刷卡多**
+### **2. 支付渠道（现金/刷卡）**
 
 基本上都是刷卡，瑞士的所有店里都有pos机，刷卡非常方便，也可以用国内的信用卡（最好有芯片）。取现比较麻烦，尤其是在境外取现会有高额手续费，如果是境外旅游，推荐revolut银行卡，转入瑞郎，可以根据实时谷歌汇率结算成当地货币，扣除相应的瑞郎。
 
 ^
 
-#### **3. 网购**
+### **3. 网购**
 
 总的来说，大部分商品**第一步都是直接使用谷歌购物搜索**，货比三家。
 
-化妆品护肤品方面，推荐Douglas，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。
+- 化妆品护肤品方面，推荐[Douglas](<https://www.douglas.ch/de>)，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。
 
-衣服方面，可以去hm、zalando、shein或者相应牌子的网店购物。
+- 衣服方面，可以去hm、[zalando](<https://www.zalando.ch/damen-home/>)、[shein](<https://ch.shein.com/>)或者相应牌子的网店购物。
 
-电子产品可以查看digitec，microspot，interdiscount等等。
+- 电子产品可以查看[digitec](<https://www.digitec.ch/en>)，[microspot](<https://www.microspot.ch/de>)，[interdiscount](<https://www.interdiscount.ch/de>)等等。
 
-日用品方面，Amazon德国网站还是很不错的选择，基本上可以买到想要的东西，少数情况会被税，但基本上不会出现这样的情况。
+- 日用品方面，[Amazon德国网站](<https://www.amazon.de/>)还是很不错的选择，基本上可以买到想要的东西，少数情况会被税，但基本上不会出现这样的情况。
 
-如果要买只有国内才能买到的东西或者希望买一些便宜的东西且能接受较长的物流时间，可以去AliExpress上购买，类似于海外淘宝，一般两周内也会送到。
+- 如果要买只有国内才能买到的东西或者希望买一些便宜的东西且能接受较长的物流时间，可以去[AliExpress](<https://de.aliexpress.com/?gatewayAdapt=glo2deu>)上购买，类似于海外淘宝，一般两周内也会送到。
 
 ^
 
-#### **4. 超市购物**
+### **4. 超市购物**
 
 瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
+
+**②苏黎世有几家蔬菜水果种类较多的商店，各家名称不一样，被苏村的同学们亲切地统称为土耳其超市。坐标们如下：Wehntalerstrasse 530, 8046 Zürich, 这家蔬菜比较丰富，有一般超市买不到的青菜、菠菜和空心菜等，有冷冻海鲜，调料也齐全；Birmensdorferstrasse 143, 8003 Zürich，这家蔬菜种类一般，肉类比较丰富，牛羊肉的价格不错；Schaffhauserstrasse 459, 8052 Zürich, 蔬菜水果牛羊肉冷冻海鲜都有，365天营业且晚上十点多才关门，就营业时间而言堪称业界良心。Badenerstrasse 530, 8048 Zürich这家无肉类；Tramstrasse 10, 8050 Zürich, 这家蔬菜种类一般，羊排非常不错；Wehntalerstrasse 280，8046 Zürich， 目测最大的一家，种类齐全。
+
+③瑞士还有专门卖新鲜肉的超市，价格比较便宜，被大家称作肉联厂。苏黎世有两家肉联厂，一家是Carmelo’s Fleishshop（Herdenstrasse 61, 8004 Zürich）。瑞士什么都贵，但是猪蹄内脏之类外国人不吃的东西会很便宜，肉联厂都有卖（关于猪蹄，Migros5CHF/kg，鸡心鸡胗之类大约一盒三四块）。还有一家是Fleisch Discount（Badenerstrasse 342, 8004 Zürich），肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
+
+④亚洲超市：中国特色的物品、亚洲的蔬菜、干货、中国调料、生鲜或者速食都有，买东西注意查看保质期。Asia Store（主火车站内，在Sihlquai/HB车站那个口下到火车站地下）新亚洲（google map 搜索 New Asia Market）联华（现有3家）Asiaway shop（在oerlikon）
+
+⑤日韩超市：Nishi Japan Shop和Yumi Hana
+
+⑥德国边境城市购物：有七点卡或G.A卡的同学或租车拼车的同学可以去德国Waldshut或者Konstanz的Kaufland和DM采购，周边国家的物价比瑞士低很多，当然关于时间成本每个人计算方式不一样。19：06从苏黎世出发倒两趟火车在19：52到达Waldshut或者可以坐1h15min的火车直达康村，DM和Kaufland都在火车站附近。DM购买日化用品和奶粉等，20：00关门；Kaufland是德国综合型超市，可购买蔬菜肉类和生活用品，22：00结束营业。理论上从德国带过境的肉类每人不得超过1KG，偶尔有海关上来检查。
+
+※注意：瑞士除部分餐馆以外大多数商店和超市周日不开门，除主火车站和机场外，Affoltern和Altstetten火车站附近也有小型超市开门，大家要注意规划屯粮。另外可下载Migros app实时查询Migros超市营业信息。
 
 此外，土耳其超市maxim food，蔬菜水果齐全价格便宜，牛羊肉也相对便宜，调料如生抽、醋之类的都可以买到，是很不错的特色超市。
 
@@ -50,7 +66,14 @@
 
 ^
 
-#### **5. 邮寄**
+### **5. 二手市场**
+
+
+**②二手市场为了环保和碳中和，且每年都有大量老生完成学业回国卖闲置二手家具，新生落地不用重复添置新家具，跟学长学姐购买二手家具是最优惠划算的方式，苏黎世也有很多二手群，大家都会优先把闲置用品放在群里出售。学校有专门的二手交易网站，UZH 和 ETH 的二手交易平台 [www.marktplatz.uzh.ch/borse/](http://www.marktplatz.uzh.ch/borse/)在苏黎世的Helvetiaplatz 周六有旧货集市,是购买自行车、电器甚至旧衣服等的好去处。二手店的分布较为分散，比如在位于Wehntalerstrasse 530土超隔壁就有一家。现在很火的Brockenhaus（苏黎世有好几家,主火车站旁边有一家较大的店面,地址：Neugasse 11, 8005 Zürich，网址:www\.zuercher-brockenhaus.ch）和Caritas。高评分二手衣物交易店：Bogen C（Viaduktstrasse 91, 8005 Zürich，网址:<http://www.caritas-zuerich.ch/caritaszh/hilfe-finden/guenstiger-leben/caritas-secondhand-laeden-viel-mode-fuer-wenig-geld>）。订阅Ron Orp邮件，每周都会推送在苏黎世举办的活动，有时也会有关于新二手市场和租房的信息。也可以登录他们的网站查看相关信息：<https://www.ronorp.net>**
+
+
+
+### **6. 邮寄**
 
 > [warning] 本章节后期考虑添加自国内向瑞士邮寄物品的相关内容，或使用外链形式。
 
