Update 06结语&学联服务.md, 10申请签证.md, 31苏黎世消费与邮寄.md, 35“户口”相关.md, ETH行前材料发放.md, SUMMARY.md, 办理“迁入”（首次住址申报）.md, 居住和日常出行相关.md, 常用租房渠道及其流程.md, 报警和法律援助.md, 租房考虑因素.md, 资金安全和常见骗局.md, 防诈反诈.md Delete 25住址申报（“户口”）.md, 行前材料发放.md

--- a/常用租房渠道及其流程.md
+++ b/常用租房渠道及其流程.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮、俞玥
+> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮
 
 > [warning] 【声明】学联只提供信息整理，对本章节所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
 
