--- a/报警和法律援助.md
+++ b/报警和法律援助.md
@@ -1,6 +1,4 @@
-> [success] 本章作者：赵逸飞、李敬淇
-
-> [success] 特别鸣谢：李敬淇
+> [success] 本章作者：赵逸飞及李敬淇
 
 > [danger] 【学联提醒】*如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案）！*
 
