--- a/租房考虑因素.md
+++ b/租房考虑因素.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮、俞玥
+> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮
 
 > [success] 特别鸣谢：原苏黎世6区居委会
 
