--- a/06结语&学联服务.md
+++ b/06结语&学联服务.md
@@ -32,34 +32,34 @@
 
 #### **2.3 学联福利汇总**&#x20;
 
-##### **1) 学联专属SIM卡折扣：Sunrise & LEBARA**
+##### **2.3.1 学联专属SIM卡折扣：Sunrise & LEBARA**
 业务介绍：[《一文读懂瑞士电话卡+学联Sunrise YOL福利》](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 ![](.topwrite/assets/image_1682192038118.png =245)
 
-##### **2) 学联专属保险折扣：Swisscare**
+##### **2.3.2 学联专属保险折扣：Swisscare**
 业务介绍：[《Swisscare学生保险Guideline+学联专属折扣》](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)
 学联专属办理链接：[Swisscare - Foreign Student Health Insurance Switzerland](https://forms.swisscare.com/#/spss?group=3018)
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 
-##### **3) 学联租房合作伙伴：Intermezzo**
+##### **2.3.3 学联租房合作伙伴：Intermezzo**
 业务介绍：[《新生租房篇+学联伙伴Intermezzo租房公司》](https://forum.acssz.org/d/386)
 ![](.topwrite/assets/image_1682200100537.png =258)
 
 
-##### **4) 电子学联卡**
+##### **2.3.4 电子学联卡**
 
 微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
 材料审核通过后，在学联合作商家处出示该卡即可享9折优惠，具体可在小程序内查看。
 
-#### **2.4 学联《苏黎世留学指南》**
+#### **2.4 学联《苏黎世留学 - 生活指南 / 新生手册》**
 
-[《苏黎世留学指南》](https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html)
+[《苏黎世留学 - 生活指南 / 新生手册》](https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html)
 
 ^
 
 ***
 
 *本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布。*
-*资料搜集与内容编写*：
-*技术保障*：
+*资料搜集与内容编写：杨锦涛、徐思婕、赵逸飞、杜超瑜、陈雨航、李圆、任逍遥、杨晨宇、张家萌、俞玥、王尊、田竹仝、范梦瑶、张堃、李许雯佳、凌晞、陈小雨及陈庆瑄、彭雅莹、岳妮、李敬淇*
+*技术保障：陈小雨、崔玺萌、杨锦涛*
