--- a/31苏黎世消费与邮寄.md
+++ b/31苏黎世消费与邮寄.md
@@ -46,17 +46,17 @@
 
 ### **4. 超市购物**
 
-瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
+- 瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
 
-**②苏黎世有几家蔬菜水果种类较多的商店，各家名称不一样，被苏村的同学们亲切地统称为土耳其超市。坐标们如下：Wehntalerstrasse 530, 8046 Zürich, 这家蔬菜比较丰富，有一般超市买不到的青菜、菠菜和空心菜等，有冷冻海鲜，调料也齐全；Birmensdorferstrasse 143, 8003 Zürich，这家蔬菜种类一般，肉类比较丰富，牛羊肉的价格不错；Schaffhauserstrasse 459, 8052 Zürich, 蔬菜水果牛羊肉冷冻海鲜都有，365天营业且晚上十点多才关门，就营业时间而言堪称业界良心。Badenerstrasse 530, 8048 Zürich这家无肉类；Tramstrasse 10, 8050 Zürich, 这家蔬菜种类一般，羊排非常不错；Wehntalerstrasse 280，8046 Zürich， 目测最大的一家，种类齐全。
+- 苏黎世有几家蔬菜水果种类较多的商店，各家名称不一样，被苏村的同学们亲切地统称为土耳其超市。坐标们如下：Wehntalerstrasse 530, 8046 Zürich, 这家蔬菜比较丰富，有一般超市买不到的青菜、菠菜和空心菜等，有冷冻海鲜，调料也齐全；Birmensdorferstrasse 143, 8003 Zürich，这家蔬菜种类一般，肉类比较丰富，牛羊肉的价格不错；Schaffhauserstrasse 459, 8052 Zürich, 蔬菜水果牛羊肉冷冻海鲜都有，365天营业且晚上十点多才关门，就营业时间而言堪称业界良心。Badenerstrasse 530, 8048 Zürich这家无肉类；Tramstrasse 10, 8050 Zürich, 这家蔬菜种类一般，羊排非常不错；Wehntalerstrasse 280，8046 Zürich， 目测最大的一家，种类齐全。
 
-③瑞士还有专门卖新鲜肉的超市，价格比较便宜，被大家称作肉联厂。苏黎世有两家肉联厂，一家是Carmelo’s Fleishshop（Herdenstrasse 61, 8004 Zürich）。瑞士什么都贵，但是猪蹄内脏之类外国人不吃的东西会很便宜，肉联厂都有卖（关于猪蹄，Migros5CHF/kg，鸡心鸡胗之类大约一盒三四块）。还有一家是Fleisch Discount（Badenerstrasse 342, 8004 Zürich），肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
+- 瑞士还有专门卖新鲜肉的超市，价格比较便宜，被大家称作肉联厂。苏黎世有两家肉联厂，一家是Carmelo’s Fleishshop（Herdenstrasse 61, 8004 Zürich）。瑞士什么都贵，但是猪蹄内脏之类外国人不吃的东西会很便宜，肉联厂都有卖（关于猪蹄，Migros5CHF/kg，鸡心鸡胗之类大约一盒三四块）。还有一家是Fleisch Discount（Badenerstrasse 342, 8004 Zürich），肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
 
-④亚洲超市：中国特色的物品、亚洲的蔬菜、干货、中国调料、生鲜或者速食都有，买东西注意查看保质期。Asia Store（主火车站内，在Sihlquai/HB车站那个口下到火车站地下）新亚洲（google map 搜索 New Asia Market）联华（现有3家）Asiaway shop（在oerlikon）
+- 亚洲超市：中国特色的物品、亚洲的蔬菜、干货、中国调料、生鲜或者速食都有，买东西注意查看保质期。Asia Store（主火车站内，在Sihlquai/HB车站那个口下到火车站地下）新亚洲（google map 搜索 New Asia Market）联华（现有3家）Asiaway shop（在oerlikon）
 
-⑤日韩超市：Nishi Japan Shop和Yumi Hana
+- 日韩超市：Nishi Japan Shop和Yumi Hana
 
-⑥德国边境城市购物：有七点卡或G.A卡的同学或租车拼车的同学可以去德国Waldshut或者Konstanz的Kaufland和DM采购，周边国家的物价比瑞士低很多，当然关于时间成本每个人计算方式不一样。19：06从苏黎世出发倒两趟火车在19：52到达Waldshut或者可以坐1h15min的火车直达康村，DM和Kaufland都在火车站附近。DM购买日化用品和奶粉等，20：00关门；Kaufland是德国综合型超市，可购买蔬菜肉类和生活用品，22：00结束营业。理论上从德国带过境的肉类每人不得超过1KG，偶尔有海关上来检查。
+- 德国边境城市购物：有七点卡或G.A卡的同学或租车拼车的同学可以去德国Waldshut或者Konstanz的Kaufland和DM采购，周边国家的物价比瑞士低很多，当然关于时间成本每个人计算方式不一样。19：06从苏黎世出发倒两趟火车在19：52到达Waldshut或者可以坐1h15min的火车直达康村，DM和Kaufland都在火车站附近。DM购买日化用品和奶粉等，20：00关门；Kaufland是德国综合型超市，可购买蔬菜肉类和生活用品，22：00结束营业。理论上从德国带过境的肉类每人不得超过1KG，偶尔有海关上来检查。
 
 ※注意：瑞士除部分餐馆以外大多数商店和超市周日不开门，除主火车站和机场外，Affoltern和Altstetten火车站附近也有小型超市开门，大家要注意规划屯粮。另外可下载Migros app实时查询Migros超市营业信息。
 
