--- a/资金安全和常见骗局.md
+++ b/资金安全和常见骗局.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮、俞玥
+> [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞及张家萌、陈庆瑄、彭雅莹、岳妮
 
 ### **4. 关于租房过程中的资金安全**
 
